// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LanguageParser should parse Go fixtures correctly 1`] = `
[
  {
    "chunk_hash": "4a829123137dd0f0247cac32033fcb516bf9b5581044a790840864e46c03e136",
    "containerPath": "",
    "content": ""fmt"",
    "created_at": "[TIMESTAMP]",
    "endLine": 3,
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "0c54a66d401cc5f0cb72a9e42d247ea930c71ef5",
    "imports": [
      ""fmt"",
    ],
    "kind": "import_spec",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
kind: import_spec

"fmt"",
    "startLine": 3,
    "symbols": [
      {
        "kind": "function",
        "line": 5,
        "name": "myFunction",
      },
      {
        "kind": "type",
        "line": 9,
        "name": "MyType",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "f4b5176566b5165c515ea28ee5770957c61ebf18ac84412262f3da978fc57d44",
    "containerPath": "",
    "content": "func myFunction() {
    fmt.Println("Hello, Go!")
}",
    "created_at": "[TIMESTAMP]",
    "endLine": 7,
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "0c54a66d401cc5f0cb72a9e42d247ea930c71ef5",
    "imports": [
      ""fmt"",
    ],
    "kind": "function_declaration",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
kind: function_declaration

func myFunction() {
    fmt.Println("Hello, Go!")
}",
    "startLine": 5,
    "symbols": [
      {
        "kind": "function",
        "line": 5,
        "name": "myFunction",
      },
      {
        "kind": "type",
        "line": 9,
        "name": "MyType",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "125de83243a2f4cb0869d974cf82881c1ea38b53de65ce3c8cf597555e74b6ac",
    "containerPath": "",
    "content": "type MyType struct {
    name string
}",
    "created_at": "[TIMESTAMP]",
    "endLine": 11,
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "0c54a66d401cc5f0cb72a9e42d247ea930c71ef5",
    "imports": [
      ""fmt"",
    ],
    "kind": "type_declaration",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
kind: type_declaration

type MyType struct {
    name string
}",
    "startLine": 9,
    "symbols": [
      {
        "kind": "function",
        "line": 5,
        "name": "myFunction",
      },
      {
        "kind": "type",
        "line": 9,
        "name": "MyType",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse Java fixtures correctly 1`] = `
[
  {
    "chunk_hash": "c7bf8cb907acb4b0d6e6fddaf47d772c5f0336e85f853a81815767441d7dff94",
    "containerPath": "",
    "content": "import java.util.List;",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/java.java",
    "git_branch": "main",
    "git_file_hash": "14e04aba844af5a81e2c94f014713ea55bd90807",
    "imports": [
      "import java.util.List;",
    ],
    "kind": "import_declaration",
    "language": "java",
    "semantic_text": "filePath: tests/fixtures/java.java
kind: import_declaration

import java.util.List;",
    "startLine": 1,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 4,
        "name": "myMethod",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "a7a75fe95323edd73fc60b92f12fc013a153efbcf98c98377199ebb1e887a209",
    "containerPath": "",
    "content": "class MyClass {
    public void myMethod() {
        System.out.println("Hello, Java!");
    }
}",
    "created_at": "[TIMESTAMP]",
    "endLine": 7,
    "filePath": "tests/fixtures/java.java",
    "git_branch": "main",
    "git_file_hash": "14e04aba844af5a81e2c94f014713ea55bd90807",
    "imports": [
      "import java.util.List;",
    ],
    "kind": "class_declaration",
    "language": "java",
    "semantic_text": "filePath: tests/fixtures/java.java
kind: class_declaration

class MyClass {
    public void myMethod() {
        System.out.println("Hello, Java!");
    }
}",
    "startLine": 3,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 4,
        "name": "myMethod",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "0b64c9f2f3e7d8bc006ab2841e2516f7eb1752ced4fccf76b9ccf9aa4562376d",
    "containerPath": "MyClass",
    "content": "public void myMethod() {
        System.out.println("Hello, Java!");
    }",
    "created_at": "[TIMESTAMP]",
    "endLine": 6,
    "filePath": "tests/fixtures/java.java",
    "git_branch": "main",
    "git_file_hash": "14e04aba844af5a81e2c94f014713ea55bd90807",
    "imports": [
      "import java.util.List;",
    ],
    "kind": "method_declaration",
    "language": "java",
    "semantic_text": "filePath: tests/fixtures/java.java
kind: method_declaration
containerPath: MyClass

public void myMethod() {
        System.out.println("Hello, Java!");
    }",
    "startLine": 4,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 4,
        "name": "myMethod",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse JavaScript fixtures correctly 1`] = `
[
  {
    "chunk_hash": "bfbce26d696921c2281b7e4c2eebed78128ac63be763d2b09fa054793a790934",
    "containerPath": "",
    "content": "// This is a comment",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "05dc17876438f75088d77a3e118b1b4c8cc5385d",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "comment",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: comment

// This is a comment",
    "startLine": 1,
    "symbols": [
      {
        "kind": "function",
        "line": 4,
        "name": "myFunction",
      },
      {
        "kind": "class",
        "line": 8,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 9,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 14,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "ed8291088a1a5a73b9864543d1ce1e9a65ff0a84fc7b2e84bb51d4394d593245",
    "containerPath": "",
    "content": "import { a } from 'b';",
    "created_at": "[TIMESTAMP]",
    "endLine": 2,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "05dc17876438f75088d77a3e118b1b4c8cc5385d",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "import_statement",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: import_statement

import { a } from 'b';",
    "startLine": 2,
    "symbols": [
      {
        "kind": "function",
        "line": 4,
        "name": "myFunction",
      },
      {
        "kind": "class",
        "line": 8,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 9,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 14,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "62d83893874d1e8701dc414b00e8e52bcacf5b54fb31e216e283ec7235619c45",
    "containerPath": "",
    "content": "function myFunction() {
  console.log('hello');
}",
    "created_at": "[TIMESTAMP]",
    "endLine": 6,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "05dc17876438f75088d77a3e118b1b4c8cc5385d",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "function_declaration",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: function_declaration

function myFunction() {
  console.log('hello');
}",
    "startLine": 4,
    "symbols": [
      {
        "kind": "function",
        "line": 4,
        "name": "myFunction",
      },
      {
        "kind": "class",
        "line": 8,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 9,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 14,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "46289932de1604479260f0178bba3a5f7019d133b263efc139c9a18d856bebf1",
    "containerPath": "",
    "content": "console.log('hello')",
    "created_at": "[TIMESTAMP]",
    "endLine": 5,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "05dc17876438f75088d77a3e118b1b4c8cc5385d",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "call_expression",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: call_expression

console.log('hello')",
    "startLine": 5,
    "symbols": [
      {
        "kind": "function",
        "line": 4,
        "name": "myFunction",
      },
      {
        "kind": "class",
        "line": 8,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 9,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 14,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "6fd7f5fcd99232f0e49797bebada48669972e9c870171a3848c61eebca7f22dd",
    "containerPath": "",
    "content": "class MyClass {
  myMethod() {
    return 1;
  }
}",
    "created_at": "[TIMESTAMP]",
    "endLine": 12,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "05dc17876438f75088d77a3e118b1b4c8cc5385d",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "class_declaration",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: class_declaration

class MyClass {
  myMethod() {
    return 1;
  }
}",
    "startLine": 8,
    "symbols": [
      {
        "kind": "function",
        "line": 4,
        "name": "myFunction",
      },
      {
        "kind": "class",
        "line": 8,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 9,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 14,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "b4debc24bebfb7484ed5e08c2e47765e7b7449130b923b7c89c7079823b5c73a",
    "containerPath": "",
    "content": "const myVar = () => {};",
    "created_at": "[TIMESTAMP]",
    "endLine": 14,
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "05dc17876438f75088d77a3e118b1b4c8cc5385d",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "lexical_declaration",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
kind: lexical_declaration

const myVar = () => {};",
    "startLine": 14,
    "symbols": [
      {
        "kind": "function",
        "line": 4,
        "name": "myFunction",
      },
      {
        "kind": "class",
        "line": 8,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 9,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 14,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse Markdown fixtures correctly 1`] = `
[
  {
    "chunk_hash": "ed09ca2736773c6ceb4e8e5499e71d1a80fd6a4a346efff7a88a2d6c3ff27274",
    "content": "# Markdown Fixture",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "semantic_text": "filePath: tests/fixtures/markdown.md

# Markdown Fixture",
    "startLine": 1,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "152f882642f9c50be75eeade70c1ea1e2cfbe7901db4a0a46b2f9d25159c755f",
    "content": "This is a paragraph.",
    "created_at": "[TIMESTAMP]",
    "endLine": 3,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "semantic_text": "filePath: tests/fixtures/markdown.md

This is a paragraph.",
    "startLine": 3,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "6a71ffba5e7729a8faef7020e41476963c3a49ca90958e41ce8eb234ed005d08",
    "content": "## This is a heading",
    "created_at": "[TIMESTAMP]",
    "endLine": 5,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "semantic_text": "filePath: tests/fixtures/markdown.md

## This is a heading",
    "startLine": 5,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "8dada63f9b5a079670e1e692f1790aa4334c5d920f6333a56d49d483eac7f42d",
    "content": "This is another paragraph.
",
    "created_at": "[TIMESTAMP]",
    "endLine": 8,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "semantic_text": "filePath: tests/fixtures/markdown.md

This is another paragraph.
",
    "startLine": 7,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse Python fixtures correctly 1`] = `
[
  {
    "chunk_hash": "de2abade832c8e350a1bdc98cfcdb1e202ac4749c5fc51a4a970d41736b6df5c",
    "containerPath": "",
    "content": "import os",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/python.py",
    "git_branch": "main",
    "git_file_hash": "b61b1aadac260e768de0eafb1ea81783ab04db64",
    "imports": [
      "import os",
    ],
    "kind": "import_statement",
    "language": "python",
    "semantic_text": "filePath: tests/fixtures/python.py
kind: import_statement

import os",
    "startLine": 1,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "function",
        "line": 4,
        "name": "my_method",
      },
      {
        "kind": "function",
        "line": 7,
        "name": "my_function",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "4416cd8dd5bbde8d874fb5633b664d25cb2cf0056bb279836527e32e4dd1cf0e",
    "containerPath": "",
    "content": "class MyClass:
    def my_method(self):
        print("Hello, Python!")",
    "created_at": "[TIMESTAMP]",
    "endLine": 5,
    "filePath": "tests/fixtures/python.py",
    "git_branch": "main",
    "git_file_hash": "b61b1aadac260e768de0eafb1ea81783ab04db64",
    "imports": [
      "import os",
    ],
    "kind": "class_definition",
    "language": "python",
    "semantic_text": "filePath: tests/fixtures/python.py
kind: class_definition

class MyClass:
    def my_method(self):
        print("Hello, Python!")",
    "startLine": 3,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "function",
        "line": 4,
        "name": "my_method",
      },
      {
        "kind": "function",
        "line": 7,
        "name": "my_function",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "b8cb7ef3b47294cb6d26e1a0479dba320243ecd0cf40e6336775f3d049a1de70",
    "containerPath": "",
    "content": "def my_method(self):
        print("Hello, Python!")",
    "created_at": "[TIMESTAMP]",
    "endLine": 5,
    "filePath": "tests/fixtures/python.py",
    "git_branch": "main",
    "git_file_hash": "b61b1aadac260e768de0eafb1ea81783ab04db64",
    "imports": [
      "import os",
    ],
    "kind": "function_definition",
    "language": "python",
    "semantic_text": "filePath: tests/fixtures/python.py
kind: function_definition

def my_method(self):
        print("Hello, Python!")",
    "startLine": 4,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "function",
        "line": 4,
        "name": "my_method",
      },
      {
        "kind": "function",
        "line": 7,
        "name": "my_function",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "bd34f0510bd5068fefbe1d3c56e0d5f858f1e3f16d72e6fb86cdb32dcac37244",
    "containerPath": "",
    "content": "def my_function():
    pass",
    "created_at": "[TIMESTAMP]",
    "endLine": 8,
    "filePath": "tests/fixtures/python.py",
    "git_branch": "main",
    "git_file_hash": "b61b1aadac260e768de0eafb1ea81783ab04db64",
    "imports": [
      "import os",
    ],
    "kind": "function_definition",
    "language": "python",
    "semantic_text": "filePath: tests/fixtures/python.py
kind: function_definition

def my_function():
    pass",
    "startLine": 7,
    "symbols": [
      {
        "kind": "class",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "function",
        "line": 4,
        "name": "my_method",
      },
      {
        "kind": "function",
        "line": 7,
        "name": "my_function",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse TypeScript fixtures correctly 1`] = `
[
  {
    "chunk_hash": "bfbce26d696921c2281b7e4c2eebed78128ac63be763d2b09fa054793a790934",
    "containerPath": "",
    "content": "// This is a comment",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "a47497f7bcf1232772c3b09f3de7db1dd02b2d9f",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "comment",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: comment

// This is a comment",
    "startLine": 1,
    "symbols": [
      {
        "kind": "function",
        "line": 4,
        "name": "myFunction",
      },
      {
        "kind": "class",
        "line": 8,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 9,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 14,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 16,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 20,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "ed8291088a1a5a73b9864543d1ce1e9a65ff0a84fc7b2e84bb51d4394d593245",
    "containerPath": "",
    "content": "import { a } from 'b';",
    "created_at": "[TIMESTAMP]",
    "endLine": 2,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "a47497f7bcf1232772c3b09f3de7db1dd02b2d9f",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "import_statement",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: import_statement

import { a } from 'b';",
    "startLine": 2,
    "symbols": [
      {
        "kind": "function",
        "line": 4,
        "name": "myFunction",
      },
      {
        "kind": "class",
        "line": 8,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 9,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 14,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 16,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 20,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "62d83893874d1e8701dc414b00e8e52bcacf5b54fb31e216e283ec7235619c45",
    "containerPath": "",
    "content": "function myFunction() {
  console.log('hello');
}",
    "created_at": "[TIMESTAMP]",
    "endLine": 6,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "a47497f7bcf1232772c3b09f3de7db1dd02b2d9f",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "function_declaration",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: function_declaration

function myFunction() {
  console.log('hello');
}",
    "startLine": 4,
    "symbols": [
      {
        "kind": "function",
        "line": 4,
        "name": "myFunction",
      },
      {
        "kind": "class",
        "line": 8,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 9,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 14,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 16,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 20,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "46289932de1604479260f0178bba3a5f7019d133b263efc139c9a18d856bebf1",
    "containerPath": "",
    "content": "console.log('hello')",
    "created_at": "[TIMESTAMP]",
    "endLine": 5,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "a47497f7bcf1232772c3b09f3de7db1dd02b2d9f",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "call_expression",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: call_expression

console.log('hello')",
    "startLine": 5,
    "symbols": [
      {
        "kind": "function",
        "line": 4,
        "name": "myFunction",
      },
      {
        "kind": "class",
        "line": 8,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 9,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 14,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 16,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 20,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "6fd7f5fcd99232f0e49797bebada48669972e9c870171a3848c61eebca7f22dd",
    "containerPath": "",
    "content": "class MyClass {
  myMethod() {
    return 1;
  }
}",
    "created_at": "[TIMESTAMP]",
    "endLine": 12,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "a47497f7bcf1232772c3b09f3de7db1dd02b2d9f",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "class_declaration",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: class_declaration

class MyClass {
  myMethod() {
    return 1;
  }
}",
    "startLine": 8,
    "symbols": [
      {
        "kind": "function",
        "line": 4,
        "name": "myFunction",
      },
      {
        "kind": "class",
        "line": 8,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 9,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 14,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 16,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 20,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "4f9ff60fb6e9d9218195c5b2af2e37c126497b9dbda6838356718ce7fe4d4b7a",
    "containerPath": "MyClass",
    "content": "myMethod() {
    return 1;
  }",
    "created_at": "[TIMESTAMP]",
    "endLine": 11,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "a47497f7bcf1232772c3b09f3de7db1dd02b2d9f",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "method_definition",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: method_definition
containerPath: MyClass

myMethod() {
    return 1;
  }",
    "startLine": 9,
    "symbols": [
      {
        "kind": "function",
        "line": 4,
        "name": "myFunction",
      },
      {
        "kind": "class",
        "line": 8,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 9,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 14,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 16,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 20,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "b4debc24bebfb7484ed5e08c2e47765e7b7449130b923b7c89c7079823b5c73a",
    "containerPath": "",
    "content": "const myVar = () => {};",
    "created_at": "[TIMESTAMP]",
    "endLine": 14,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "a47497f7bcf1232772c3b09f3de7db1dd02b2d9f",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "lexical_declaration",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: lexical_declaration

const myVar = () => {};",
    "startLine": 14,
    "symbols": [
      {
        "kind": "function",
        "line": 4,
        "name": "myFunction",
      },
      {
        "kind": "class",
        "line": 8,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 9,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 14,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 16,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 20,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "ffbaa67156c5c6797b6e979ae7b40d09c839ede749416ea15b140a5e806bdc14",
    "containerPath": "",
    "content": "type MyType = {
  name: string;
};",
    "created_at": "[TIMESTAMP]",
    "endLine": 18,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "a47497f7bcf1232772c3b09f3de7db1dd02b2d9f",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "type_alias_declaration",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: type_alias_declaration

type MyType = {
  name: string;
};",
    "startLine": 16,
    "symbols": [
      {
        "kind": "function",
        "line": 4,
        "name": "myFunction",
      },
      {
        "kind": "class",
        "line": 8,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 9,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 14,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 16,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 20,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "7c078235ad80c07bc55176f61a080b5dfc580d9c6db2f51138f43cef0620d72a",
    "containerPath": "",
    "content": "interface MyInterface {
  id: number;
}",
    "created_at": "[TIMESTAMP]",
    "endLine": 22,
    "filePath": "tests/fixtures/typescript.ts",
    "git_branch": "main",
    "git_file_hash": "a47497f7bcf1232772c3b09f3de7db1dd02b2d9f",
    "imports": [
      "import { a } from 'b';",
    ],
    "kind": "interface_declaration",
    "language": "typescript",
    "semantic_text": "filePath: tests/fixtures/typescript.ts
kind: interface_declaration

interface MyInterface {
  id: number;
}",
    "startLine": 20,
    "symbols": [
      {
        "kind": "function",
        "line": 4,
        "name": "myFunction",
      },
      {
        "kind": "class",
        "line": 8,
        "name": "MyClass",
      },
      {
        "kind": "method",
        "line": 9,
        "name": "myMethod",
      },
      {
        "kind": "variable",
        "line": 14,
        "name": "myVar",
      },
      {
        "kind": "type",
        "line": 16,
        "name": "MyType",
      },
      {
        "kind": "interface",
        "line": 20,
        "name": "MyInterface",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse YAML fixtures correctly 1`] = `
[
  {
    "chunk_hash": "7faf28cc86373c82f34b2d4885392ed863a17a33a23fa5ef55caf75a9b798085",
    "content": "document: one",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml

document: one",
    "startLine": 1,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "42b8143ee2f453a99da7d620fa6e4098ce5b58a81e47ee92787784673290acc1",
    "content": "pair:",
    "created_at": "[TIMESTAMP]",
    "endLine": 2,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml

pair:",
    "startLine": 2,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "f61f046945e572e3c609093a9bb46677315f28cb523f1d4df55f2a96e8e00a10",
    "content": "  key: value",
    "created_at": "[TIMESTAMP]",
    "endLine": 3,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml

  key: value",
    "startLine": 3,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "546d6629778413283752817130f850389ab7f46b2a45ed5e9cd45a5e32ae18b0",
    "content": "document: two",
    "created_at": "[TIMESTAMP]",
    "endLine": 1,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml

document: two",
    "startLine": 1,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "ac0cddc5cbd16b18271a122ebc7fd418edd369c3bb11e941a823acd63ea91b9c",
    "content": "another_pair:",
    "created_at": "[TIMESTAMP]",
    "endLine": 2,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml

another_pair:",
    "startLine": 2,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "3255b416a16255d96420a3c3fbed1c6c8e36bb9929283c23d741904a51770ace",
    "content": "  nested_key: nested_value",
    "created_at": "[TIMESTAMP]",
    "endLine": 3,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml

  nested_key: nested_value",
    "startLine": 3,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
]
`;
